update toml and pin packages

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
+  command = "pnpm build"
   publish = ".next"
-  command = "npm run build"
+
+[dev]
+  command = "pnpm dev"
+
+[[plugins]]
+package = "@netlify/plugin-nextjs"
