--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "15.0.4",
+        "@netlify/functions": "2.8.2",
+        "@netlify/plugin-nextjs": "5.7.3",
+        "next": "14.2.15",
         "react": "18.3.1",
         "react-dom": "18.3.1"
     },
     "devDependencies": {
         "eslint": "8.57.1",
-        "eslint-config-next": "15.0.4"
+        "eslint-config-next": "14.2.15"
     }
 }
